[package]
name = "blaze-inject-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1.9.5"
once_cell = "1.18.0"
log = "0.4.20"
env_logger = "0.10.0"
url = "2.4.1"
lazy_static = "1.4.0"
structopt = "0.3.26"
chrono = { version = "0.4", features = ["serde"] }
